# STA

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
include/: integer_linked_list.hpp  integer_vector.hpp
src/: integer_linked_list.cpp  integer_vector.cpp
tests/: test_integer_linked_list.cpp  test_integer_vector.cpp
